--- a/admin.css
+++ b/admin.css
@@ -134,6 +134,7 @@ label {
   font-weight: 600;
 }
 
+input,
 textarea {
   width: 100%;
   border-radius: 0.8rem;
@@ -147,6 +148,11 @@ textarea {
   line-height: 1.5;
 }
 
+input {
+  padding: 0.7rem 0.8rem;
+}
+
+input:focus,
 textarea:focus {
   outline: 2px solid rgba(242, 200, 75, 0.45);
   border-color: #b1933b;
