--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,7 @@ a:hover {
   position: absolute;
   left: calc(1.4rem + 0.55rem);
   bottom: -0.28rem;
-  width: 8rem;
+  width: calc(100% - (1.4rem + 0.55rem));
   height: 2px;
   background: linear-gradient(to right, var(--signal), transparent);
 }
